[tool.poetry]
name = "llm-training-project"
version = "0.1.0"
description = "Personal project based on LLM training class"
authors = ["Braun <breyes@mozilla.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "llm_training_project"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
langchain = "^0.1.3"
openai = "^1.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
